# wincap

./: Cargo.toml  build.rs
src/: CREATEPROCESS_MANIFEST_RESOURCE_ID.txt  main.rs  resource.h  resource.rc  resource_consts.rs  screen_view.rs  window.rs
