[package]
name = "screencap"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winsafe = { version = "0.0.17", features = ["gui", "comctl"] }
#windows = "0.48"

[build-dependencies]
winres = "0.1"